--- a/inc/modules/woo/assets/css/woo-module.css
+++ b/inc/modules/woo/assets/css/woo-module.css
@@ -4,6 +4,24 @@ Theme Name: kava
 WooCommerce styles override
 */
 /*         Variables        */
+/*--------------------------------------------------------------
+# Layout & Positioning Mixins
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Clearfix & Reset Mixins
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Typography Mixins
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Component Mixins
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Utility Mixins
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Layout Mixins
+--------------------------------------------------------------*/
 .elementor-widget-wp-widget-woocommerce_widget_cart .woocommerce-mini-cart__buttons .checkout:before,
 .elementor-widget-wp-widget-woocommerce_shopping_cart .woocommerce-mini-cart__buttons .checkout:before,
 .widget_shopping_cart .woocommerce-mini-cart__buttons .checkout:before, .elementor-widget-wp-widget-woocommerce_widget_cart .woocommerce-mini-cart__buttons .wc-forward:not(.checkout):before,
@@ -58,12 +76,6 @@ label.inline input[type=checkbox] + span::after, .star-rating::before, .star-rat
   margin-bottom: 8px;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Buttons
  */
@@ -195,12 +207,6 @@ select.orderby {
   width: 170px;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Messages
  */
@@ -277,12 +283,6 @@ WooCommerce styles override
   background-color: #fdbc32;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * WooCommerce pagination
  */
@@ -431,12 +431,6 @@ WooCommerce styles override
   line-height: 1;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Rating
  */
@@ -654,12 +648,6 @@ select:focus {
   text-transform: none;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  *  Checkbox
  */
@@ -723,12 +711,6 @@ label.inline input[type=checkbox]:checked + span::after {
 }
 
 /*        Layouts        */
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Shop layout
  */
@@ -1002,12 +984,6 @@ ul.products.columns--6 li.product {
   }
 }
 /*        Pages        */
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * WooComerce cart page
  */
@@ -1311,12 +1287,6 @@ WooCommerce styles override
   border-color: #ebeced;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Checkout page
  */
@@ -1496,12 +1466,6 @@ WooCommerce styles override
 /**
  * Compare
  */
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * My account page
  */
@@ -1860,12 +1824,6 @@ table.woocommerce-table--order-downloads.shop_table tbody tr td.download-file .b
  * Category grid styles
  */
 /*       Single Product        */
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Variations form
  */
@@ -2085,12 +2043,6 @@ ol.commentlist li + li {
   margin-left: auto;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Single Product Thumbnails
  */
@@ -2378,12 +2330,6 @@ WooCommerce styles override
 /**
  * WooCommerce Widgets
  */
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Price filter widget
  */
@@ -2440,12 +2386,6 @@ WooCommerce styles override
   margin-right: 4px;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Rating filter widget
  */
@@ -2491,12 +2431,6 @@ WooCommerce styles override
   vertical-align: middle;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Rating filter widget
  */
@@ -2554,12 +2488,6 @@ WooCommerce styles override
   border-color: #ebeced !important;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Active filters widget
  */
@@ -2594,12 +2522,6 @@ WooCommerce styles override
 /**
  * Top rated products widget
  */
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Product categories widget
  */
@@ -2708,12 +2630,6 @@ WooCommerce styles override
   background-color: #ebeced;
 }
 
-/*
-Theme Name: kava
-
-WooCommerce styles override
-*/
-/*         Variables        */
 /**
  * Cart widget
  */
