--- a/inc/modules/blog-layouts/assets/css/blog-layouts-module.css
+++ b/inc/modules/blog-layouts/assets/css/blog-layouts-module.css
@@ -21,27 +21,27 @@
   # Colors
   --------------------------------------------------------------*/
   /* Base Colors */
-  --kava-color-white: oklch(100% 0 0);
-  --kava-color-light: oklch(96% 0.005 240);
-  --kava-color-lightblue: oklch(96.5% 0.01 240);
-  --kava-color-dark: oklch(0% 0 0);
-  --kava-color-darkgray: oklch(18% 0 0);
-  --kava-color-darkgray2: oklch(28% 0 0);
+  --kava-color-white: rgb(255, 255, 255);
+  --kava-color-light: rgb(239, 242, 245);
+  --kava-color-lightblue: rgb(238, 245, 250);
+  --kava-color-dark: rgb(0, 0, 0);
+  --kava-color-darkgray: rgb(18, 18, 18);
+  --kava-color-darkgray2: rgb(41, 41, 41);
   /* Background Colors */
-  --kava-color-bg-preloader-cover: oklch(100% 0 0);
-  --kava-color-background-screen: oklch(96% 0 0);
-  --kava-color-background-hr: oklch(94% 0 240);
-  --kava-color-background-input: oklch(100% 0 0);
-  --kava-color-background-pre: oklch(94.5% 0 0);
+  --kava-color-bg-preloader-cover: rgb(255, 255, 255);
+  --kava-color-background-screen: rgb(242, 242, 242);
+  --kava-color-background-hr: rgb(235, 235, 235);
+  --kava-color-background-input: rgb(255, 255, 255);
+  --kava-color-background-pre: rgb(237, 237, 237);
   /* Text Colors */
-  --kava-color-text-screen: oklch(52% 0.12 220);
-  --kava-color-text-input: oklch(50% 0 0);
+  --kava-color-text-screen: rgb(0, 117, 142);
+  --kava-color-text-input: rgb(99, 99, 99);
   /* Border Colors */
-  --kava-color-border-button: oklch(83% 0 0);
-  --kava-color-border-input: oklch(94% 0 240);
-  --kava-color-border-abbr: oklch(50% 0 0);
-  --kava-color-border-table: oklch(94% 0 240);
-  --kava-color-border-pre: oklch(86% 0 0); /* color.adjust(#eee, $lightness: -10%) */
+  --kava-color-border-button: rgb(199, 199, 199);
+  --kava-color-border-input: rgb(235, 235, 235);
+  --kava-color-border-abbr: rgb(99, 99, 99);
+  --kava-color-border-table: rgb(235, 235, 235);
+  --kava-color-border-pre: rgb(209, 209, 209); /* color.adjust(#eee, $lightness: -10%) */
   /*--------------------------------------------------------------
   # Structure
   --------------------------------------------------------------*/
@@ -70,6 +70,17 @@
   /* Line Heights */
   --kava-line-height-body: 1.5;
   --kava-line-height-pre: 1.6;
+}
+@supports (color: color(display-p3 0 0 0%)) {
+:root {
+  --kava-color-text-screen: rgb(0, 117, 142);
+}
+
+@media (color-gamut: p3) {
+:root {
+  --kava-color-text-screen: color(display-p3 0.06564 0.4589 0.58328);
+}
+}
 }
 
 /*--------------------------------------------------------------
@@ -1693,6 +1704,7 @@ body:not(.sidebar_enabled) .list-style-v3 .default-item {
 .creative-item.format-post .cat-links,
 .creative-item.format-post .tags-links,
 .creative-item.format-post .comments-link {
+  margin-right: 0;
   margin-right: initial;
 }
 .creative-item.format-post .entry-footer .entry-meta .tags-links + div:not(:empty) {
@@ -1879,6 +1891,7 @@ body:not(.sidebar_enabled) .list-style-v3 .default-item {
   font-family: "Font Awesome 7 Free";
   font-weight: 900;
   font-style: normal;
+  font-feature-settings: normal;
   font-variant: normal;
   text-rendering: auto;
   line-height: 1;
@@ -2886,6 +2899,7 @@ body:not(.sidebar_enabled) .list-style-v3 .default-item {
   font-family: "Font Awesome 7 Free";
   font-weight: 900;
   font-style: normal;
+  font-feature-settings: normal;
   font-variant: normal;
   text-rendering: auto;
   line-height: 1;
@@ -4116,6 +4130,7 @@ body:not(.sidebar_enabled) .list-style-v3 .default-item {
   font-family: "Font Awesome 7 Free";
   font-weight: 900;
   font-style: normal;
+  font-feature-settings: normal;
   font-variant: normal;
   text-rendering: auto;
   line-height: 1;
